// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Article Default 1`] = `
<div
  className="left-data-wrapper article"
>
  <div
    className="article-data-container"
  >
    <div
      className="title"
    >
      <h1>
        The title of the article
      </h1>
    </div>
  </div>
  <div
    className="article-creator-wrapper"
  >
    <div
      className="creator-data-wrapper"
    >
      <div
        className="creator-comment-wrapper body"
      >
        <div>
          this is the body content for the article
          <p>
            You can nest content in here
          </p>
          <p>
            This is an example of styled text
             
            <div
              className="styledText undefined"
              style={
                Object {
                  "color": "red",
                }
              }
            >
              <div
                style={
                  Object {
                    "backgroundColor": undefined,
                  }
                }
              >
                I'm styled text
              </div>
            </div>
          </p>
          <p>
            This is an example of inline styled text
             
            <span
              className="styledText undefined"
              style={
                Object {
                  "color": "red",
                }
              }
            >
              <div
                style={
                  Object {
                    "backgroundColor": undefined,
                  }
                }
              >
                I'm styled text
              </div>
            </span>
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots Footer Default 1`] = `
<footer
  className="site-footer-container"
>
  <div
    className="site-footer-wrapper"
  >
    <div
      className="copyrights"
    >
      <p>
        Copyright © 
        2020
         
        <a
          href="/"
        >
          Dado
        </a>
      </p>
    </div>
    <div
      className="footer-nav"
    >
      <a
        href="/"
      >
        Link to somewhere
      </a>
      <a
        href="/"
      >
        Link to nowhere
      </a>
    </div>
    <div
      className="footer-msg"
    >
      <div>
        This is arbitrary content
        <p>
          that can be nested
        </p>
      </div>
    </div>
  </div>
</footer>
`;

exports[`Storyshots Header Default 1`] = `
<section
  className="site-logo-container header"
>
  <div
    className="sc-AxjAm gPHMU section site-logo-wrapper"
  >
    <div
      className="site-logo"
    >
      <div
        className=" gatsby-image-wrapper"
        style={
          Object {
            "display": "inline-block",
            "height": 38,
            "overflow": "hidden",
            "position": "relative",
            "width": 170,
          }
        }
      >
        <img
          alt=""
          aria-hidden={true}
          src="data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABQAAAAECAYAAACOXx+WAAAACXBIWXMAABcRAAAXEQHKJvM/AAAAjUlEQVQY05WOQQoCMQxFW0VwIYpQFMZZtAgjLnQhuG1P0Nz/OL7fKYKICwOPpMnPb1ws5v6J9EP/0ecRYMR8JK/hkHLdx2xbWKZsR9jQvzZ9bprQtNkGCL3/NpxggAfs4MxQ5hfyivyEE9S+GGDq2jvcOMB/nasfVDOcKbZIpbo4116oVujyvutlJp3iBXwXJpWT4bHDAAAAAElFTkSuQmCC"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <img
          alt=""
          aria-hidden={true}
          src="data:image/svg+xml,%3csvg%20xmlns='http://www.w3.org/2000/svg'%20width='400'%20height='89'%20viewBox='0%200%20400%2089'%20preserveAspectRatio='none'%3e%3cpath%20d='M37%2031l-1%2014c0%2013%200%2014%202%2014s2-1%202-14c0-14%200-15%205-14%204%201%206%206%204%2011%200%203-1%204-4%204l-3%201h3c9%200%2012-12%204-16H37m35%2014v14h9l8-1H76V44h10l-5-1h-5V31l6%201%206-1-8-1h-8v15m34-14l3%201%203-1v21c0%207%200%207%202%207s2-1%202-14l1-13h3l3-1-8-1-9%201m36%2014v14h8l8-1h-12V44c0-13%200-14-2-14s-2%201-2%2015m43-14l-11%2028%203-7%203-5h9l2%206c2%205%203%206%205%206%203%200%203%202-4-15-6-15-5-14-7-13m32-1v15l1%2014c2%200%202-2%202-14l1-13%202-1c7-1%208%209%202%2012l-3%201h3c6%200%209%2010%204%2013l-2%202h2c3%200%206-3%206-7s-3-8-5-8l1-2c5-6%201-12-8-12h-6m70%202c-10%206-8%2024%204%2027%204%201%2011%200%2012-1h-3c-9%202-15-3-15-14%200-6%202-10%205-12%203-1%208-1%2011%201h2c2-3-11-4-16-1m40%200c-4%203-6%207-6%2014%202%2019%2028%2018%2028-1%200-12-12-19-22-13m3%200c-4%202-6%2014-3%2021%204%209%2016%207%2018-4%201-13-6-21-15-17'%20fill='%23d3d3d3'%20fill-rule='evenodd'/%3e%3c/svg%3e"
          style={
            Object {
              "height": "100%",
              "left": 0,
              "objectFit": "cover",
              "objectPosition": "center",
              "opacity": 1,
              "position": "absolute",
              "top": 0,
              "transitionDelay": "500ms",
              "width": "100%",
            }
          }
        />
        <picture>
          <source
            srcSet=""
          />
          <img
            alt="Logo"
            height={38}
            loading="lazy"
            onLoad={[Function]}
            src="test-image-stub"
            srcSet=""
            style={
              Object {
                "height": "100%",
                "left": 0,
                "objectFit": "cover",
                "objectPosition": "center",
                "opacity": 0,
                "position": "absolute",
                "top": 0,
                "transition": "opacity 500ms",
                "width": "100%",
              }
            }
            width={170}
          />
        </picture>
        <noscript
          dangerouslySetInnerHTML={
            Object {
              "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"170\\" height=\\"38\\" src=\\"test-image-stub\\" alt=\\"Logo\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
            }
          }
        />
      </div>
    </div>
    <div
      className="sc-AxirZ lgbZhd"
    >
      <div>
        Advertorial
      </div>
    </div>
  </div>
</section>
`;

exports[`Storyshots Image Caption 1`] = `
<div
  className="article-img-wrapper"
>
  <img
    alt="a placeholder"
    src="https://via.placeholder.com/150"
    style={
      Object {
        "width": undefined,
      }
    }
  />
  <div
    style={
      Object {
        "fontWeight": 700,
        "margin": 0,
        "padding": 0,
        "width": "auto",
      }
    }
  >
    <div>
      An Image Caption
    </div>
  </div>
</div>
`;

exports[`Storyshots Image Default 1`] = `
<div
  className="article-img-wrapper"
>
  <img
    alt="a placeholder"
    src="https://via.placeholder.com/150"
    style={
      Object {
        "width": undefined,
      }
    }
  />
</div>
`;

exports[`Storyshots Image Fixed 1`] = `
<div
  className="article-img-wrapper"
>
  <div
    className=" gatsby-image-wrapper"
    style={
      Object {
        "display": "inline-block",
        "height": 150,
        "overflow": "hidden",
        "position": "relative",
        "width": 150,
      }
    }
  >
    <picture>
      <source
        srcSet=""
      />
      <img
        alt=""
        height={150}
        loading="lazy"
        onLoad={[Function]}
        src="test-image-stub"
        srcSet=""
        style={
          Object {
            "height": "100%",
            "left": 0,
            "objectFit": "cover",
            "objectPosition": "center",
            "opacity": 0,
            "position": "absolute",
            "top": 0,
            "transition": "opacity 500ms",
            "width": "100%",
          }
        }
        width={150}
      />
    </picture>
    <noscript
      dangerouslySetInnerHTML={
        Object {
          "__html": "<picture><source srcset=\\"\\" /><img loading=\\"lazy\\" width=\\"150\\" height=\\"150\\" src=\\"test-image-stub\\" alt=\\"\\" style=\\"position:absolute;top:0;left:0;opacity:1;width:100%;height:100%;object-fit:cover;object-position:center\\"/></picture>",
        }
      }
    />
  </div>
</div>
`;

exports[`Storyshots Image Max Width 1`] = `
<div
  className="article-img-wrapper"
>
  <img
    alt="a placeholder"
    src="https://via.placeholder.com/150"
    style={
      Object {
        "width": 100,
      }
    }
  />
</div>
`;

exports[`Storyshots Styled Text Background Color 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Centered 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
      "textAlign": "center",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Color And Background Color 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Colored 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": "red",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Default 1`] = `
<div
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</div>
`;

exports[`Storyshots Styled Text Inline 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</span>
`;

exports[`Storyshots Styled Text Inline Background 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": undefined,
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</span>
`;

exports[`Storyshots Styled Text Inline Background And Color 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": "white",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": "red",
      }
    }
  >
    I'm styled text
  </div>
</span>
`;

exports[`Storyshots Styled Text Inline Colored 1`] = `
<span
  className="styledText undefined"
  style={
    Object {
      "color": "red",
    }
  }
>
  <div
    style={
      Object {
        "backgroundColor": undefined,
      }
    }
  >
    I'm styled text
  </div>
</span>
`;
